I forgot how links work in Markdown.

--- a/issues_we_found.md.template
+++ b/issues_we_found.md.template
@@ -14,4 +14,5 @@ isn't perfect!)
 | ------  | -----  |
 {% for issue in matched_issues %}
 |[{{"%s.md" % issue[0].split()[0]}}]({{ issue[0] }}) | [{{"%s.md" % issue[0].split()[0]}}]({{ issue[1] }}) |
+|[{{ issue[0] }}]({{"%s.md" % issue[0].split()[0]}}) | [{{ issue[1] }}]({{"%s.md" % issue[0].split()[0]}}) |
 {% endfor %}
